# Devourer

./: .gitignore  .gitmodules  BUILD_AND_TEST.md  CHANGELOG.md  CMakeLists.txt  README.md
android/: ApfpvStaLink.java  build.gradle
android/jni/: apfpv_jni.cpp
android/pixelpilot/: AirCameraSettings.java  AirPresets.java  AirSshClient.java  AndroidManifest.xml  ApfpvLinkManager.java  ApfpvSettings.java  ApfpvWifiManager.java  GsMenuWfbng.java  GsSettings.java  LinkModeCoordinator.java  VideoActivity.java  WlxAdapters.java
demo/: apfpv_compliance.cpp  apfpv_probe.cpp
docs/: ANDROID_INTERFACE.md  ARMING_SEQUENCE.md  PIXELPILOT_FEATURES.md  PIXELPILOT_GAPS.md  PIXELPILOT_WIRING.md  VRX_PARITY.md
hal/: hal8812a_fw.c  hal8812a_fw.h
jni/: WfbngLink.cpp  WfbngLink.hpp  apfpv_jni.cpp
src/: ApfpvDhcp.cpp  ApfpvDhcp.h  ApfpvStation.cpp  ApfpvStation.h  Dot11Frames.cpp  Dot11Frames.h  Iqk8812a.cpp  LqFeedback.cpp  LqFeedback.h  RadioManagementModule.cpp  RadioManagementModule.h  RtlJaguarDevice.cpp  RtlJaguarDevice.h  RtlUsbAdapter.cpp  RtlUsbAdapter.h  RxDeframe.cpp  RxDeframe.h  ScanProbe.cpp  ScanProbe.h  StationMode.cpp  StationMode.h  StationTxDesc.cpp  StationTxDesc.h  Wpa2Authenticator.cpp  Wpa2Authenticator.h  Wpa2Crypto.cpp  Wpa2Crypto.h  Wpa2Supplicant.cpp  Wpa2Supplicant.h
src/crypto/: AesCcm.cpp  AesCcm.h  AesCmac.cpp  AesCmac.h  Sha1Hmac.cpp  Sha1Hmac.h
tests/: aes_test.cpp  crypto_test.cpp
